5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/222/users/2171/executions/1760_672.log
== TEST (2019-05-22 18:30:18) 
-- CODE:
# Não se esqueça de incluir o módulo numpy
from numpy import *
v0 = N []
print(n)
-- ERROR:
File "XXXX", line 3
    v0 = N []
            ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-22 18:30:26) 
-- CODE:
# Não se esqueça de incluir o módulo numpy
from numpy import *
v0 = []
print(n)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-22 18:30:38) 
-- CODE:
# Não se esqueça de incluir o módulo numpy
from numpy import *
v0 = []
print(v0)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-22 18:33:16) 
-- CODE:
# Não se esqueça de incluir o módulo numpy
from numpy import *
v0 = []
v1 = ones (1, dtype=int)
print(v0)
print(v1)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-22 18:33:38) 
-- CODE:
# Não se esqueça de incluir o módulo numpy
from numpy import *
v0 = []
v1 = ones (1,1,1,1 dtype=int)
print(v0)
print(v1)
-- ERROR:
File "XXXX", line 4
    v1 = ones (1,1,1,1 dtype=int)
                           ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-22 18:33:51) 
-- CODE:
# Não se esqueça de incluir o módulo numpy
from numpy import *
v0 = []
v1 = ones (4 dtype=int)
print(v0)
print(v1)
-- ERROR:
File "XXXX", line 4
    v1 = ones (4 dtype=int)
                     ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-22 18:34:00) 
-- CODE:
# Não se esqueça de incluir o módulo numpy
from numpy import *
v0 = []
v1 = ones (4 dtype=int)
print(v0)
print(v1)
-- ERROR:
File "XXXX", line 4
    v1 = ones (4 dtype=int)
                     ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-22 18:34:04) 
-- CODE:
# Não se esqueça de incluir o módulo numpy
from numpy import *
v0 = []
v1 = ones (1 dtype=int)
print(v0)
print(v1)
-- ERROR:
File "XXXX", line 4
    v1 = ones (1 dtype=int)
                     ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-22 18:34:11) 
-- CODE:
# Não se esqueça de incluir o módulo numpy
from numpy import *
v0 = []
v1 = ones (1 dtype=int)
print(v0)
print(v1)
-- ERROR:
File "XXXX", line 4
    v1 = ones (1 dtype=int)
                     ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-22 18:34:14) 
-- CODE:
# Não se esqueça de incluir o módulo numpy
from numpy import *
v0 = []
v1 = ones (1 dtype=int)
print(v0)
print(v1)
-- ERROR:
File "XXXX", line 4
    v1 = ones (1 dtype=int)
                     ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-22 18:34:15) 
-- CODE:
# Não se esqueça de incluir o módulo numpy
from numpy import *
v0 = []
v1 = ones (1 dtype=int)
print(v0)
print(v1)
-- ERROR:
File "XXXX", line 4
    v1 = ones (1 dtype=int)
                     ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-22 18:34:17) 
-- CODE:
# Não se esqueça de incluir o módulo numpy
from numpy import *
v0 = []
v1 = ones (1 dtype=int)
print(v0)
print(v1)
-- EXECUTION TIME:
0.117948
-- ERROR:
  File "/home/codebench/codes/1760/672/main.py", line 4
    v1 = ones (1 dtype=int)
                     ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-22 18:34:18) 
-- CODE:
# Não se esqueça de incluir o módulo numpy
from numpy import *
v0 = []
v1 = ones (1 dtype=int)
print(v0)
print(v1)
-- ERROR:
File "XXXX", line 4
    v1 = ones (1 dtype=int)
                     ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-22 18:34:25) 
-- CODE:
# Não se esqueça de incluir o módulo numpy
from numpy import *
v0 = []
v1 = ones (1, dtype=int)
print(v0)
print(v1)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-22 18:34:44) 
-- CODE:
# Não se esqueça de incluir o módulo numpy
from numpy import *
v0 = []
v1 = ones (4, dtype=int)
print(v0)
print(v1)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-22 18:34:57) 
-- CODE:
# Não se esqueça de incluir o módulo numpy
from numpy import *
v0 = []
v1 = ones (4, dtype=int)
print(v0)
print(v1)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-22 18:35:06) 
-- CODE:
# Não se esqueça de incluir o módulo numpy
from numpy import *
v0 = []
v1 = ones (4, dtype=int)
print(v0)
print(v1)
-- EXECUTION TIME:
0.384351
-- TEST CASE 1:
---- input:
34
---- correct output:
[1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1]
---- user output:
[]
[1 1 1 1]
-- TEST CASE 2:
---- input:
10
---- correct output:
[1 1 1 1 1 1 1 1 1 1]
---- user output:
[]
[1 1 1 1]
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-22 18:36:22) 
-- CODE:
# Não se esqueça de incluir o módulo numpy
from numpy import *
v0 = (6, dtype=int)
v1 = ones (4, dtype=int)
print(v0)
print(v1)
-- ERROR:
File "XXXX", line 3
    v0 = (6, dtype=int)
                  ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-22 18:36:55) 
-- CODE:
# Não se esqueça de incluir o módulo numpy
from numpy import *
v0 = size (6, dtype=int)
v1 = ones (4, dtype=int)
print(v0)
print(v1)
-- EXECUTION TIME:
0.379934
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1760/672/main.py", line 3, in <module>
    v0 = size (6, dtype=int)
TypeError: size() got an unexpected keyword argument 'dtype'

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-22 18:36:57) 
-- CODE:
# Não se esqueça de incluir o módulo numpy
from numpy import *
v0 = size (6, dtype=int)
v1 = ones (4, dtype=int)
print(v0)
print(v1)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-22 18:37:26) 
-- CODE:
# Não se esqueça de incluir o módulo numpy
from numpy import *
v0 = n (6, dtype=int)
v1 = ones (4, dtype=int)
print(v0)
print(v1)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-22 18:38:51) 
-- CODE:
# Não se esqueça de incluir o módulo numpy
from numpy import *
v0 = six (6, dtype=int)
v1 = ones (4, dtype=int)
print(v0)
print(v1)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-22 18:39:13) 
-- CODE:
# Não se esqueça de incluir o módulo numpy
from numpy import *
v0 =  6
v1 = ones (4, dtype=int)
print(v0)
print(v1)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-22 18:39:20) 
-- CODE:
# Não se esqueça de incluir o módulo numpy
from numpy import *
v0 =  6
v1 = ones (4, dtype=int)
print(v0)
print(v1)
-- EXECUTION TIME:
0.42044
-- TEST CASE 1:
---- input:
34
---- correct output:
[1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1]
---- user output:
6
[1 1 1 1]
-- TEST CASE 2:
---- input:
10
---- correct output:
[1 1 1 1 1 1 1 1 1 1]
---- user output:
6
[1 1 1 1]
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-22 18:39:36) 
-- CODE:
# Não se esqueça de incluir o módulo numpy
from numpy import *
v0 = 
v1 = ones (4, dtype=int)
print(v0)
print(v1)
-- ERROR:
File "XXXX", line 3
    v0 = 
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-22 18:39:40) 
-- CODE:
# Não se esqueça de incluir o módulo numpy
from numpy import *
v0 = 
v1 = ones (4, dtype=int)
print(v0)
print(v1)
-- EXECUTION TIME:
0.200615
-- ERROR:
  File "/home/codebench/codes/1760/672/main.py", line 3
    v0 = 
        ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-22 18:39:44) 
-- CODE:
# Não se esqueça de incluir o módulo numpy
from numpy import *
v0 = 0
v1 = ones (4, dtype=int)
print(v0)
print(v1)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-22 18:39:53) 
-- CODE:
# Não se esqueça de incluir o módulo numpy
from numpy import *
v0 = 1
v1 = ones (4, dtype=int)
print(v0)
print(v1)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-22 18:40:10) 
-- CODE:
# Não se esqueça de incluir o módulo numpy
from numpy import *
v0 = 1
v1 = ones (6, dtype=int)
print(v0)
print(v1)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-22 18:40:18) 
-- CODE:
# Não se esqueça de incluir o módulo numpy
from numpy import *
v0 = 1
v1 = ones (6, dtype=int)
print(v0)
print(v1)
-- EXECUTION TIME:
0.41512
-- TEST CASE 1:
---- input:
34
---- correct output:
[1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1]
---- user output:
1
[1 1 1 1 1 1]
-- TEST CASE 2:
---- input:
10
---- correct output:
[1 1 1 1 1 1 1 1 1 1]
---- user output:
1
[1 1 1 1 1 1]
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-22 18:50:21) 
-- CODE:
# Não se esqueça de incluir o módulo numpy
from numpy import *
v0 = 6
v1 = ones (6, dtype=int)
print(v0)
print(v1)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-22 18:50:32) 
-- CODE:
# Não se esqueça de incluir o módulo numpy
from numpy import *
v0 = 6
v1 = ones (6, dtype=int)
print(v0)
print(v1)
-- EXECUTION TIME:
0.514431
-- TEST CASE 1:
---- input:
34
---- correct output:
[1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1]
---- user output:
6
[1 1 1 1 1 1]
-- TEST CASE 2:
---- input:
10
---- correct output:
[1 1 1 1 1 1 1 1 1 1]
---- user output:
6
[1 1 1 1 1 1]
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-22 18:50:47) 
-- CODE:
# Não se esqueça de incluir o módulo numpy
from numpy import *
v1 = ones (6, dtype=int)
print(v1)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-22 18:50:50) 
-- CODE:
# Não se esqueça de incluir o módulo numpy
from numpy import *
v1 = ones (6, dtype=int)
print(v1)
-- EXECUTION TIME:
0.446932
-- TEST CASE 1:
---- input:
34
---- correct output:
[1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1]
---- user output:
[1 1 1 1 1 1]
-- TEST CASE 2:
---- input:
10
---- correct output:
[1 1 1 1 1 1 1 1 1 1]
---- user output:
[1 1 1 1 1 1]
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-22 18:50:54) 
-- CODE:
# Não se esqueça de incluir o módulo numpy
from numpy import *
v1 = ones (6, dtype=int)
print(v1)
-- EXECUTION TIME:
0.514166
-- TEST CASE 1:
---- input:
34
---- correct output:
[1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1]
---- user output:
[1 1 1 1 1 1]
-- TEST CASE 2:
---- input:
10
---- correct output:
[1 1 1 1 1 1 1 1 1 1]
---- user output:
[1 1 1 1 1 1]
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-22 18:52:17) 
-- CODE:
# Não se esqueça de incluir o módulo numpy
from numpy import *
v0 = (0>= dtype=int)
print(v0)
v1 = ones (6, dtype=int)
print(v1)
-- ERROR:
File "XXXX", line 3
    v0 = (0>= dtype=int)
                   ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-22 18:52:35) 
-- CODE:
# Não se esqueça de incluir o módulo numpy
from numpy import *
v0 = (0< dtype=int)
print(v0)
v1 = ones (6, dtype=int)
print(v1)
-- ERROR:
File "XXXX", line 3
    v0 = (0< dtype=int)
                  ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-22 18:53:08) 
-- CODE:
# Não se esqueça de incluir o módulo numpy
from numpy import *
v0 = (n>= 0, dtype=int)
print(v0)
v1 = ones (6, dtype=int)
print(v1)
-- ERROR:
File "XXXX", line 3
    v0 = (n>= 0, dtype=int)
                      ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-22 18:53:14) 
-- CODE:
# Não se esqueça de incluir o módulo numpy
from numpy import *
v0 = (n >= 0, dtype=int)
print(v0)
v1 = ones (6, dtype=int)
print(v1)
-- ERROR:
File "XXXX", line 3
    v0 = (n >= 0, dtype=int)
                       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
